syntax = "proto3";
package stride.stakeibc;
option go_package = "github.com/Stride-Labs/stride/v4/x/stakeibc/types";
import "gogoproto/gogo.proto";
import "cosmos/base/v1beta1/coin.proto";

// ---------------------- Delegation Callbacks ---------------------- //
message SplitDelegation {
  string validator = 1;
  string amount = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}

message DelegateCallback {
  string host_zone_id = 1;
  string deposit_record_id = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
  repeated SplitDelegation split_delegations = 3;
}

// ---------------------- Claim Callbacks ---------------------- //

message ClaimCallback {
  string user_redemption_record_id = 1;
  string chain_id = 2;
  string epoch_number = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}

// ---------------------- Reinvest Callback ---------------------- //
message ReinvestCallback {
  cosmos.base.v1beta1.Coin reinvest_amount = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coin"
  ];
  string host_zone_id = 3;
}

// ---------------------- Undelegation Callbacks ---------------------- //
message UndelegateCallback {
  string host_zone_id = 1;
  repeated SplitDelegation split_delegations = 2;
  repeated string epoch_unbonding_record_ids = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}

// ---------------------- Redemption Callbacks ---------------------- //
message RedemptionCallback {
  string host_zone_id = 1;
  repeated string epoch_unbonding_record_ids = 2 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}

// ---------------- Validator Rebalance Callbacks ---------------------- //

message Rebalancing {
  string src_validator = 1;
  string dst_validator = 2;
  string amt = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Int",
    (gogoproto.nullable) = false
  ];
}

message RebalanceCallback {
  string host_zone_id = 1;
  repeated Rebalancing rebalancings = 2;
}